--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<param
-boom
- y'all better accept this fucking pull request B 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
  
